log
Fri May  1 09:01:08 PM UTC 2026: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:51:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   51 |     map->lower_than = lower_than;
      |     ^~~
      |     mapa
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
1232d33
Fri May  1 09:01:28 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
6e52e69
